@@ -73,7 +73,9 @@ public class JsonUserPrefsStorageTest {
     private UserPrefs getTypicalUserPrefs() {
         UserPrefs userPrefs = new UserPrefs();
         userPrefs.setGuiSettings(new GuiSettings(1000, 500, 300, 100));
-        userPrefs.setAddressBookFilePath(Paths.get("addressbook.json"));
+        userPrefs.setApplicationItemListFilePath(Path.of("data/applicationitemlist.json"));
+        userPrefs.setCompanyItemListFilePath(Path.of("data/companyitemlist.json"));
+        userPrefs.setProfileItemListFilePath(Path.of("data/profileitemlist.json"));
         return userPrefs;
     }
 
